# socketify.py

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  publish.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  linux.yml  macos.yml  macos_arm64.yml  release.yml  windows.yml
bench/django-asgi/: requirements.txt
docs/: README.md  examples.md  getting-started.md  graphiql.md  installation.md
examples/: requirements.txt
examples/chat/: index.py
examples/docker/python3/: requirements.txt
examples/docker/python3-alpine/: Dockerfile
src/socketify/: native.py
src/socketify/native/: Make.bat  Makefile
